--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,6 +23,6 @@ spring.thymeleaf.suffix=.html
 spring.mvc.hiddenmethod.filter.enabled=true
 spring.main.allow-bean-definition-overriding=true
 
-spring.main.allow-circular-references=true
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+#spring.main.allow-circular-references=true
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
